# maya_opengl_bridge

./: .travis.yml  Animation.cpp  Animation.h  CMakeLists.txt  Drawing.cpp  Drawing.h  INSTALL  Image.cpp  Image.h  Includes.h  Joint.cpp  Joint.h  JointShower.cpp  JointShower.h  Man.cpp  Man.h  Movement.cpp  Player.cpp  Player.h  README  README.md  Textures.cpp  Vertex.h  maya_opengl_bridge_path.h.in  test.cpp
doc/: presentation.tex
libs/: CImg.h
libs/bitmap/: Bitmap.cpp
libs/rtg/: RTGlib.c  RTGlib.h
rtg/: horse_maya.rtg  man.rtg  man_maya.mb  player.rtg  player_maya.mb
textures/: horse.psd
